Fixed experience section

--- a/src/Sections/Experience.css
+++ b/src/Sections/Experience.css
@@ -140,3 +140,11 @@
     font-size: 13pt;
     text-align: justify;
 }
+
+#Experience .entryName {
+    white-space: pre;
+}
+
+.col {
+    min-width: unset !important
+}
