--- a/src/Components/Counters/main.css
+++ b/src/Components/Counters/main.css
@@ -1,5 +1,5 @@
 #ExperienceCounters {
-    background: #3949AB;
+    background: #000000;
     color: white;
 }
 
@@ -11,7 +11,7 @@
 
 #ExperienceCounters .counterIcon {
     align-items: center;
-    border: 4px white solid;
+    border: 4px rgb(255, 0, 0) solid;
     border-radius: 50%;
     display: flex;
     margin-top: 16px;
