--- a/src/Sections/About.css
+++ b/src/Sections/About.css
@@ -1,5 +1,6 @@
 #About {
-    background-color: hsl(210, 65%, 20%);
+    background: rgb(34,68,244);
+    background: radial-gradient(circle, rgba(34,68,244,1) 0%, rgba(249,26,26,1) 100%); 
     padding-top: 32px;
 }
 
