--- a/src/Components/Preloader/main.css
+++ b/src/Components/Preloader/main.css
@@ -1,6 +1,7 @@
 .Preloader {
     align-items: center;
-    background: #263238;
+    background: #000000;
+    background: radial-gradient(circle, rgba(34,68,244,1) 0%, rgba(249,26,26,1) 80%);
     display: flex;
     flex-direction: column;
     font-family: 'Open Sans', sans-serif;
