--- a/src/Components/button/Button.css
+++ b/src/Components/button/Button.css
@@ -14,7 +14,7 @@
   margin-top: 20px;
   font-size: 16px;
   cursor: pointer;
-  transition: all .3s ease-in-out 0s;
+  transition: all 1s ease-in-out .5s;
 }
 .main-button:hover {
   background-color: #ffffff;
